--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Jammer</title>
@@ -22,3 +23,4 @@ Select key:
 </p>
 <p id="chord-field"></p>
 </body>
+</html>
