--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
     <div class="container">
         <h1>Let's Jam</h1>
-        <p>Get a chord progression to play
-            <br />
+        <h5>Get a chord progression to play</h5>
+        <p>
             <select id="chord-key" hidden>
                 <option value="Chromatic" selected>Chromatic</option>
             </select>
@@ -32,13 +32,25 @@
             <button id="undo-button" class="btn btn-primary">Undo</button>
             <button id="reset-button" class="btn btn-primary">Reset</button>
         </p>
-        <h5 id="chord-field"></h5>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <p class="card-text">
+                <h5 id="chord-field"></h5>
+                </p>
+            </div>
+        </div>
 
+        <h5>Add special challenges</h5>
+        <button id="special-button" class="btn btn-primary">Not implemented yet</button>
+
+        <p>
         <div id="special-cards">
+            </p>
+
 
         </div>
     </div>
-    
+
 </body>
 
 </html>
