--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
 
         <p>
         <div id="special-cards">
-            </p>
+            </p>    
 
 
         </div>
-    </div>
+
+    </div> <!-- end container-->
 
 </body>
 
