added card funcitonality and link to github issues

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="sticky-footer.css">
     <script type="text/javascript" src="chords.js" defer></script>
     <script type="text/javascript" src="jammer.js" defer></script>
 </head>
@@ -41,15 +42,19 @@
         </div>
 
         <h5>Add special challenges</h5>
-        <button id="special-button" class="btn btn-primary">Not implemented yet</button>
+        <button id="special-button" class="btn btn-primary">Spice it up</button>
 
         <p>
         <div id="special-cards">
-            </p>    
+            </p>
 
 
-        </div>
-
+        </div><footer class="footer">
+            <div class="container">
+                <a
+                href="https://github.com/braaar/comeonandslam/issues/new/choose">Suggest features.</a>
+            </div>
+          </footer>
     </div> <!-- end container-->
 
 </body>
